# half-baked

./: README.md  admin.json  overview  package-lock.json  package.json
cli/src/: main.rs
program/: Cargo.toml
program/src/: entrypoint.rs  lib.rs
program/tests/: integration.rs
src/: App.less  ant-custom.less  routes.tsx
src/components/Layout/: index.tsx
src/components/OraclesGrid/: index.tsx
src/constants/: labels.ts
src/contexts/: accounts.tsx  connection.tsx  wallet.tsx
src/utils/: ids.ts
src/views/: index.tsx
src/views/data-account/: index.tsx
src/views/home/: index.tsx
src/views/new-oracle/: index.tsx
