[package]
name = "half-baked"
version = "0.0.1"
edition = "2018"
license = "GPLv3"
publish = false

[dependencies]
solana-program = "1.7.0"
borsh = "0.9.0"
num-traits = "0.2"
num-derive = "0.3.3"
thiserror = "1.0.24"

[features]
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-validator = "1.6.2"
solana-sdk = "1.6.7"

[lib]
crate-type = ["cdylib", "lib"]
